# full-text-search-engine

./: Cargo.toml  README.md
src/: main.rs
